--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"format": "prettier --write .",
-		"hook": "husky install && yarn husky set .husky/pre-commit \"yarn pretty-quick --staged\""
+		"hook": "husky install && yarn husky set .husky/pre-commit \"yarn pretty-quick --staged\"",
+		"lint": "ng lint",
+		"lint:fix": "ng lint --fix"
 	},
 	"private": true,
 	"dependencies": {
@@ -26,10 +28,20 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "^17.0.3",
+		"@angular-eslint/builder": "17.2.1",
+		"@angular-eslint/eslint-plugin": "17.2.1",
+		"@angular-eslint/eslint-plugin-template": "17.2.1",
+		"@angular-eslint/schematics": "17.2.1",
+		"@angular-eslint/template-parser": "17.2.1",
 		"@angular/cli": "^17.0.3",
 		"@angular/compiler-cli": "^17.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/jasmine": "~5.1.0",
+		"@typescript-eslint/eslint-plugin": "6.19.0",
+		"@typescript-eslint/parser": "6.19.0",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
 		"husky": "^9.0.7",
 		"jasmine-core": "~5.1.0",
 		"karma": "~6.4.0",
@@ -38,6 +50,7 @@
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
 		"prettier": "^3.2.4",
+		"prettier-eslint": "^16.3.0",
 		"pretty-quick": "^4.0.0",
 		"typescript": "~5.2.2"
 	}
