⚙️ other(setting): Add tasks to install and run app
- Change package-lock
- Change code pre-commit
- Create task and scrips to install packages, husky and run server

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,6 +3,19 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "npm:start:ide",
+			"type": "npm",
+			"script": "start:ide",
+			"icon": {
+				"id": "folder-active",
+				"color": "terminal.ansiGreen"
+			},
+			"runOptions": {
+				"runOn": "folderOpen"
+			},
+			"problemMatcher": []
+		},
+		{
 			"type": "npm",
 			"script": "start",
 			"isBackground": true,
