--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
-		"start": "ng serve",
+		"start": "ng serve -o",
+		"start:ide": "npm install && npx husky && npm run start",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"format": "prettier --write .",
 		"lint": "ng lint",
-		"lint:fix": "ng lint --fix",
-		"prepare": "husky"
+		"lint:fix": "ng lint --fix"
 	},
 	"private": true,
 	"dependencies": {
