♻️ refactor(setting): Change file tsconfig alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,19 @@
 		"module": "ES2022",
 		"useDefineForClassFields": false,
 		"lib": ["ES2022", "dom"],
+		"baseUrl": "./src",
+		"paths": {
+			"@/*": ["*"],
+			"@app/*": ["app/*"],
+			"@assets/*": ["assets/*"],
+			"@atoms/*": ["shared/ui/atoms/*"],
+			"@components/*": ["shared/ui/components/*"],
+			"@constants/*": ["shared/constants/*"],
+			"@helpers/*": ["shared/helpers/*"],
+			"@services/*": ["services/*"],
+			"@stores/*": ["stores/*"],
+			"@views/*": ["shared/ui/views/*"],
+		},
 	},
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false,
