--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,20 +3,7 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"outDir": "./out-tsc/app",
-		"types": [],
-		"baseUrl": "./src",
-		"paths": {
-			"@/*": ["*"],
-			"@app/*": ["app/*"],
-			"@assets/*": ["assets/*"],
-			"@atoms/*": ["shared/ui/atoms/*"],
-			"@components/*": ["shared/ui/components/*"],
-			"@constants/*": ["shared/constants/*"],
-			"@helpers/*": ["shared/helpers/*"],
-			"@services/*": ["services/*"],
-			"@stores/*": ["stores/*"],
-			"@views/*": ["shared/ui/views/*"]
-		}
+		"types": []
 	},
 	"files": ["src/main.ts"],
 	"include": ["src/**/*.d.ts"]
