--- a/.prettierrc
+++ b/.prettierrc
@@ -11,7 +11,7 @@
 	"importOrderSeparation": true,
 	"importOrderSortSpecifiers": true,
 	"importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
-	"plugins": ["@trivago/prettier-plugin-sort-imports"],
+	"plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
 	"importOrder": [
 		"^@angular/(.*)$",
 		"<THIRD_PARTY_MODULES>",
