--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,13 @@
 {
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=827846
-	"recommendations": ["angular.ng-template"]
+	"recommendations": [
+		"angular.ng-template",
+		"bradlc.vscode-tailwindcss",
+		"stivo.tailwind-fold",
+		"esbenp.prettier-vscode",
+		"dbaeumer.vscode-eslint",
+		"EditorConfig.EditorConfig",
+		"streetsidesoftware.code-spell-checker",
+		"streetsidesoftware.code-spell-checker-spanish"
+	]
 }
