--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,5 @@
 	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
 	"editor.formatOnType": true,
-	"editor.rulers": [130],
-	"files.associations": {
-		"*.scss": "tailwindcss"
-	}
+	"editor.rulers": [130]
 }
