--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.svg", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/deeppurple-amber.css", "src/styles.scss"],
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					},
 					"configurations": {
@@ -77,7 +77,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.svg", "src/assets"],
-						"styles": ["@angular/material/prebuilt-themes/deeppurple-amber.css", "src/styles.scss"],
+						"styles": ["src/styles.scss"],
 						"scripts": []
 					}
 				},
