--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@angular/platform-browser": "^17.0.0",
 		"@angular/platform-browser-dynamic": "^17.0.0",
 		"@angular/router": "^17.0.0",
+		"crypto-js": "^4.2.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.14.2"
@@ -38,6 +39,7 @@
 		"@angular/cli": "^17.0.3",
 		"@angular/compiler-cli": "^17.0.0",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/crypto-js": "^4.2.2",
 		"@types/jasmine": "~5.1.0",
 		"@typescript-eslint/eslint-plugin": "6.19.0",
 		"@typescript-eslint/parser": "6.19.0",
