--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@angular/platform-browser": "^17.0.0",
 		"@angular/platform-browser-dynamic": "^17.0.0",
 		"@angular/router": "^17.0.0",
+		"@ngneat/query": "^2.0.0-beta.11",
 		"crypto-js": "^4.2.0",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
