⚙️ other(setting): Change tasks vscode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,9 +3,9 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "npm:start:ide",
+			"label": "npm:start",
 			"type": "npm",
-			"script": "start:ide",
+			"script": "start",
 			"icon": {
 				"id": "folder-active",
 				"color": "terminal.ansiGreen"
