--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve -o",
-		"start:ide": "npm install && npx husky && npm run start",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"format": "prettier --write .",
 		"lint": "ng lint",
-		"lint:fix": "ng lint --fix"
+		"lint:fix": "ng lint --fix",
+		"prepare": "npx husky"
 	},
 	"private": true,
 	"dependencies": {
