--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm install
-          npm run build
+          npm run build:ghp
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
