--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"ng": "ng",
 		"start": "ng serve -o",
 		"build": "ng build",
+		"build:ghp": "ng build --base-href \"https://jochelo2289.github.io/smartsoft-labs-technical-test/\"",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
 		"format": "prettier --write .",
